--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/parser": "^5.54.1",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -27,10 +28,10 @@
     "eslint-plugin-tailwindcss": "^3.10.1",
     "next": "13.4.1",
     "postcss": "8.4.23",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "prettier": "^2.8.4",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   }
