--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@radix-ui/react-form": "^0.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@typescript-eslint/parser": "^5.54.1",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.6.0",
+    "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -26,13 +30,16 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.10.1",
+    "lucide-react": "^0.236.0",
     "next": "13.4.1",
     "postcss": "8.4.23",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "tailwind-merge": "^1.13.0",
     "tailwindcss": "3.3.2",
+    "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4"
   }
 }
