--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-tailwindcss": "^3.10.1",
     "lucide-react": "^0.236.0",
     "next": "13.4.1",
+    "node-html-markdown": "^1.3.0",
     "postcss": "8.4.23",
     "prettier": "^2.8.4",
     "react": "18.2.0",
